fix: adjust stroke width for white-stroke class for improved visibility

--- a/src/App.css
+++ b/src/App.css
@@ -87,8 +87,13 @@ body {
 }
 
 .white-stroke {
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: white;
+}
+@media (min-width: 720px) {
+  .white-stroke {
+    -webkit-text-stroke-width: 2px;
+  }
 }
 .purple-shadow {
   filter: drop-shadow(0px 0px 1px var(--color-custom-purple))
